--- a/docs/project-flow.ipynb
+++ b/docs/project-flow.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[![Jupyter Notebook](https://img.shields.io/badge/Jupyter%20Notebook-orange)](https://github.com/laminlabs/lamin-usecases/blob/main/docs/birds-eye.ipynb)"
+    "[![Jupyter Notebook](https://img.shields.io/badge/Jupyter%20Notebook-orange)](https://github.com/laminlabs/lamin-usecases/blob/main/docs/project-flow.ipynb)"
    ]
   },
   {
@@ -27,6 +27,8 @@
     "A CRISPR screen reading out a phenotypic endpoint on T cells is paired with scRNA-seq to generate insights into IFN-γ production.\n",
     "\n",
     "These insights get linked back to the original data through the steps taken in the project to provide context for interpretation & future decision making.\n",
+    "\n",
+    "<img src=\"https://raw.githubusercontent.com/laminlabs/lamindb/main/docs/img/readme/view_lineage.svg\" width=\"800\">\n",
     "\n",
     ":::{dropdown} More specifically: Why should I care about data flow?\n",
     "\n",
