♻️ Cleaned a bit enrichr

--- a/docs/celltypist.ipynb
+++ b/docs/celltypist.ipynb
@@ -111,10 +111,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "celltype_bt = lb.CellType.bionty()  # equals to bionty.CellType()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "celltype_bt = lb.CellType.bionty()  # equals to bionty.CellType()\n",
     "celltype_bt"
    ]
   },
@@ -908,31 +920,16 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Try it yourself"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This notebook is available at [https://github.com/laminlabs/lamin-usecases](https://github.com/laminlabs/lamin-usecases)."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "tags": [
-     "hide-cell"
+     "hide-output"
     ]
    },
    "outputs": [],
    "source": [
+    "# clean up test instance\n",
     "!lamin delete --force celltypist\n",
     "!rm -r ./celltypist"
    ]
