--- a/docs/enrichr.ipynb
+++ b/docs/enrichr.ipynb
@@ -20,7 +20,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pathways in single-cell analysis represent the interconnected networks of molecular signaling cascades that govern critical cellular processes. They are of utmost importance as they offer a comprehensive understanding of the intricate regulatory mechanisms underlying cellular behavior, providing insights into disease pathogenesis, therapeutic responses, and the identification of potential targets for precision medicine and intervention strategies."
+    "Pathways represent interconnected networks of molecular signaling cascades that govern critical cellular processes. They provide a comprehensive understanding of the intricate regulatory mechanisms underlying cellular behavior, insights of disease pathogenesis, therapeutic responses, and the identification of potential targets for precision medicine and intervention strategies."
    ]
   },
   {
@@ -28,7 +28,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Managing pathways across different datasets is crucial in a biotech company to gain a comprehensive understanding of complex biological processes and facilitate efficient research and development."
+    "Managing pathways across different datasets is crucial in an R&D organization to gain a comprehensive understanding of complex biological processes and facilitate efficient research and development."
    ]
   },
   {
@@ -36,7 +36,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this notebook we are registering the 2023 GO Biological process pathway ontology with Lamin. Afterwards, we are linking the pathways to genes and conducting a pathway enrichment analysis on an interferon-beta treated dataset. Finally, we will demonstrate how to fetch datasets with pathway queries using Lamin."
+    "In this notebook we manage a pathway registry of 2023 GO Biological process pathway ontology using LaminDB. We show the process of registering pathways and linking them to genes. We next perform a pathway enrichment analysis on an interferon-beta treated dataset and register the dataset. Lastly, we demonstrate how datasets are queryable by pathways and genes using LaminDB."
    ]
   },
   {
@@ -68,7 +68,7 @@
    },
    "outputs": [],
    "source": [
-    "# A lamindb instance containing bionty schema (skip if you already loaded your instance)\n",
+    "# A lamindb instance containing bionty schema (skip if you already loaded your own instance)\n",
     "!lamin init --storage ./enrichr --schema bionty"
    ]
   },
@@ -80,15 +80,10 @@
    "source": [
     "import lamindb as ln\n",
     "import lnschema_bionty as lb\n",
-    "\n",
-    "lb.settings.species = \"human\"  # globally set species\n",
-    "\n",
+    "from lamin_usecases import datasets as ds\n",
     "import gseapy as gp\n",
     "import scanpy as sc\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
-    "from lamin_usecases import datasets as ds\n",
-    "\n",
     "\n",
     "lb.settings.species = \"human\"  # globally set species"
    ]
@@ -185,10 +180,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "pathway_bionty = lb.Pathway.bionty()  # equals to bionty.Pathway()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pathway_bionty = lb.Pathway.bionty()  # equals to bionty.Pathway()\n",
     "pathway_bionty"
    ]
   },
@@ -383,10 +390,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "adata = ds.anndata_seurat_ifnb()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "adata = ds.anndata_seurat_ifnb()\n",
     "adata"
    ]
   },
@@ -804,47 +823,16 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Conclusion"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Registering pathways and associated gene sets is made simple with `.from_values` that ensures that all parsed objects are linked to ontology IDs.Linking both sets is possible with FeatureSet to facilitate simple querying for datasets that contain specific pathways. Since the pathways are linked to genes, Lamin also enables fetching the associated genes of a registered pathway to, for usecase, retrieve sets of differentially expressed genes that are a part of a specific pathway."
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Try it yourself"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This notebook is available at [https://github.com/laminlabs/lamin-usecases](https://github.com/laminlabs/lamin-usecases)."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "tags": [
-     "hide-cell"
+     "hide-output"
     ]
    },
    "outputs": [],
    "source": [
+    "# clean up test instance\n",
     "!lamin delete --force enrichr\n",
     "!rm -r ./enrichr"
    ]
