♻️ With Lukas's bullets

--- a/docs/celltypist.ipynb
+++ b/docs/celltypist.ipynb
@@ -673,15 +673,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "db_lookup.memory_b_cell.parents.all()[1].parents.list()"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {
@@ -760,24 +751,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's rename the column with predictions:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "adata_annotated.obs.rename(\n",
-    "    columns={\"predicted_labels\": \"cell_type_cell_typist\"}, inplace=True\n",
-    ")"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -796,7 +769,7 @@
    "outputs": [],
    "source": [
     "celltypes = lb.CellType.from_values(\n",
-    "    adata_annotated.obs.cell_type_cell_typist, lb.CellType.name\n",
+    "    adata_annotated.obs.predicted_labels, lb.CellType.name\n",
     ")"
    ]
   },
@@ -864,7 +837,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_annotated.add_labels(celltypes, feature=\"cell_type_cell_typist\")"
+    "file_annotated.add_labels(celltypes, feature=\"predicted_labels\")"
    ]
   },
   {
@@ -890,7 +863,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we can track the file and search for it for usecase by querying for a specific cell type."
+    "Now we can query a file by a specific cell type:"
    ]
   },
   {
