--- a/docs/enrichr.ipynb
+++ b/docs/enrichr.ipynb
@@ -20,23 +20,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pathways represent interconnected networks of molecular signaling cascades that govern critical cellular processes. They provide a comprehensive understanding of the intricate regulatory mechanisms underlying cellular behavior, insights of disease pathogenesis, therapeutic responses, and the identification of potential targets for precision medicine and intervention strategies."
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Managing pathways across different datasets is crucial in an R&D organization to gain a comprehensive understanding of complex biological processes and facilitate efficient research and development."
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "In this notebook we manage a pathway registry of 2023 GO Biological process pathway ontology using LaminDB. We show the process of registering pathways and linking them to genes. We next perform a pathway enrichment analysis on an interferon-beta treated dataset and register the dataset. Lastly, we demonstrate how datasets are queryable by pathways and genes using LaminDB."
+    "Pathways represent interconnected molecular networks of signaling cascades that govern critical cellular processes. They provide understandings  cellular behavior mechanisms, insights of disease progression and treatment responses. In an R&D organization, managing pathways across different datasets are crucial for gaining insights of potential therapeutic targets and intervention strategies.\n",
+    "\n",
+    "In this notebook we manage a pathway registry based on \"2023 GO Biological Process\" ontology. We'll walk you through the following steps:\n",
+    "\n",
+    "1. Register pathways and link them to genes. \n",
+    "2. Perform a pathway enrichment analysis on an interferon-beta treated dataset and track the dataset with LaminDB.\n",
+    "3. Demonstrate how datasets are queryable by pathways and genes using LaminDB."
    ]
   },
   {
@@ -93,7 +83,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Fetch `GO_Biological_Process_2023` pathways annotated with human genes using Enrichr"
+    "## Fetch GO pathways annotated with human genes using Enrichr"
    ]
   },
   {
@@ -374,9 +364,7 @@
    "metadata": {},
    "source": [
     "We will now conduct a pathway enrichment analysis on a small peripheral blood mononuclear cell dataset that is split into control and stimulated groups.\n",
-    "The stimulated group was treated with interferon beta.\n",
-    "\n",
-    "The dataset was initially obtained using `From \"SeuratData::ifnb\"`."
+    "The stimulated group was treated with interferon beta."
    ]
   },
   {
@@ -449,7 +437,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This analysis is based on: https://gseapy.readthedocs.io/en/master/singlecell_usecase.html"
+    "This analysis is based on the [GSEApy scRNA-seq Example](https://gseapy.readthedocs.io/en/latest/singlecell_example.html)."
    ]
   },
   {
