--- a/docs/celltypist.ipynb
+++ b/docs/celltypist.ipynb
@@ -20,20 +20,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Cell types classify cells based on public and private knowledge gained from studying gene expression patterns, morphology, functional & other properties.\n",
-    "Long established cell types have known markers and properties but cell subtypes and states are continuously being discovered, better understood and knowledge gets refined.\n",
+    "Cell types classify cells based on public and private knowledge from studying transcription, morphology, function & other properties.\n",
+    "Established cell types have well-characterized markers and properties; however, cell subtypes and states are continuously being discovered, refined and better understood.\n",
     "\n",
-    "In this notebook, we use [CellTypist](https://www.celltypist.org), a computational tool for cell type classification in scRNA-seq data. It assigns cell types based on gene expression profiles."
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "First, we create a cell type registry for cell types supported by CellTypist.\n",
-    "Then, we'll use CellTypist to classify cell types of a previously unannotated dataset and ingest the dataset with LaminDB.\n",
-    "Finally, we will demonstrate how to fetch datasets with cell type queries using LaminDB."
+    "In this notebook, we manage an immune cell type registry from [CellTypist](https://www.celltypist.org), a computational tool used for cell type classification in scRNA-seq data. We'll walk you through the following steps:\n",
+    "\n",
+    "1. Create a cell type registry seeded from cell types supported by CellTypist.\n",
+    "2. Use CellTypist to classify cell types of a previously unannotated dataset and track the dataset with LaminDB.\n",
+    "3. Demonstrate how datasets are queryable by cell types using LaminDB."
    ]
   },
   {
@@ -51,7 +45,7 @@
    "source": [
     "To run this notebook, you need to load a LaminDB instance that has the `bionty` schema mounted.\n",
     "\n",
-    "Here, we'll create a test instance (skip if you'd like to run it using your instance):"
+    "Here, we'll create a test instance (skip if you'd like to run it using your own instance):"
    ]
   },
   {
@@ -117,10 +111,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "celltype_bt = lb.CellType.bionty()  # equals to bionty.CellType()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "celltype_bt = lb.CellType.bionty()  # equals to bionty.CellType()\n",
     "celltype_bt"
    ]
   },
@@ -129,7 +135,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create an in-house registry of CellTypist terms based on the public Cell Ontology"
+    "## Create an in-house registry of CellTypist terms"
    ]
   },
   {
@@ -206,15 +212,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Inspect mapability with the public Cell Ontology\n",
+    "### Validate terms with the public Cell Ontology\n",
     "\n",
-    "For any cell type record that can be mapped against the public Cell Ontology, we'd like to ensure that it's actually mapped.\n",
+    "For any cell type record that can be validated against the public Cell Ontology, we'd like to ensure that it's actually validated.\n",
     "\n",
     "This will avoid that we'll refer to the same cell type with different identifiers.\n",
     "\n",
-    "Let's see how well the Cell Typist reference data can be mapped.\n",
+    "Let's see how well the Cell Typist reference data can be validated.\n",
     "\n",
-    "All Celltypist labeled ontology IDs are mappable to the public Cell Ontology:"
+    "All Celltypist labeled ontology IDs are validated using the public Cell Ontology:"
    ]
   },
   {
@@ -231,7 +237,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "However, when inspecting the names, most of them don't match:"
+    "However, when inspecting the names, most of them don't validate:"
    ]
   },
   {
@@ -266,7 +272,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "celltype_bt.search(celltypist_df[\"Low-hierarchy cell types\"][0]).head()"
+    "celltype_bt.search(celltypist_df[\"Low-hierarchy cell types\"][0]).head(2)"
    ]
   },
   {
@@ -274,7 +280,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's try to strip `\"s\"` and inspect if more names are mappable. Yes, there are!"
+    "Let's try to strip `\"s\"` and inspect if more names are now validated. Yes, there are!"
    ]
   },
   {
@@ -306,8 +312,8 @@
     "high_terms = celltypist_df[\"High-hierarchy cell types\"].unique()\n",
     "low_terms = celltypist_df[\"Low-hierarchy cell types\"].unique()\n",
     "\n",
-    "high_terms_umapped = set(high_terms).difference(low_terms)\n",
-    "high_terms_umapped"
+    "high_terms_nonval = set(high_terms).difference(low_terms)\n",
+    "high_terms_nonval"
    ]
   },
   {
@@ -510,7 +516,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "list(high_terms_umapped)"
+    "list(high_terms_nonval)"
    ]
   },
   {
@@ -527,7 +533,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for term in list(high_terms_umapped):\n",
+    "for term in list(high_terms_nonval):\n",
     "    print(f\"Term: {term}\")\n",
     "    display(celltype_bt.search(term).head(1))"
    ]
@@ -549,7 +555,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for name in high_terms_umapped:\n",
+    "for name in high_terms_nonval:\n",
     "    if name == \"T cells\":\n",
     "        record = lb.CellType.from_bionty(name=\"T cell\")\n",
     "        record.add_synonym(name)\n",
@@ -663,16 +669,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db_lookup.memory_b_cell.parents.all()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "db_lookup.memory_b_cell.parents.all()[1].parents.all()"
+    "db_lookup.memory_b_cell.parents.list()"
    ]
   },
   {
@@ -715,7 +712,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "predictions = celltypist.annotate(\n",
@@ -750,49 +751,26 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's rename the column with predictions:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "adata_annotated.obs.rename(\n",
-    "    columns={\"predicted_labels\": \"cell_type_cell_typist\"}, inplace=True\n",
-    ")"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create cell type records:"
+    "Validate cell types:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "celltypes = lb.CellType.from_values(\n",
-    "    adata_annotated.obs.cell_type_cell_typist, lb.CellType.name\n",
+    "    adata_annotated.obs.predicted_labels, lb.CellType.name\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "celltypes[:2]"
    ]
   },
   {
@@ -801,6 +779,27 @@
    "metadata": {},
    "source": [
     "### Track the annotated dataset in LaminDB"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Register features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "features = ln.Feature.from_df(adata_annotated.obs)\n",
+    "ln.save(features)"
    ]
   },
   {
@@ -838,33 +837,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.save(celltypes)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Add cell types as labels for a feature `\"cell_type_cell_typist\"`:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ln.Feature(name=\"cell_type_cell_typist\", type=\"category\").save()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file_annotated.add_labels(celltypes, feature=\"cell_type_cell_typist\")"
+    "file_annotated.add_labels(celltypes, feature=\"predicted_labels\")"
    ]
   },
   {
@@ -890,7 +863,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we can track the file and search for it for usecase by querying for a specific cell type."
+    "Now we can query a file by a specific cell type:"
    ]
   },
   {
@@ -920,31 +893,16 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Try it yourself"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This notebook is available at [https://github.com/laminlabs/lamin-usecases](https://github.com/laminlabs/lamin-usecases)."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "tags": [
-     "hide-cell"
+     "hide-output"
     ]
    },
    "outputs": [],
    "source": [
+    "# clean up test instance\n",
     "!lamin delete --force celltypist\n",
     "!rm -r ./celltypist"
    ]
