--- a/docs/enrichr.ipynb
+++ b/docs/enrichr.ipynb
@@ -20,23 +20,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pathways in single-cell analysis represent the interconnected networks of molecular signaling cascades that govern critical cellular processes. They are of utmost importance as they offer a comprehensive understanding of the intricate regulatory mechanisms underlying cellular behavior, providing insights into disease pathogenesis, therapeutic responses, and the identification of potential targets for precision medicine and intervention strategies."
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Managing pathways across different datasets is crucial in a biotech company to gain a comprehensive understanding of complex biological processes and facilitate efficient research and development."
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "In this notebook we are registering the 2023 GO Biological process pathway ontology with Lamin. Afterwards, we are linking the pathways to genes and conducting a pathway enrichment analysis on an interferon-beta treated dataset. Finally, we will demonstrate how to fetch datasets with pathway queries using Lamin."
+    "Pathways represent interconnected molecular networks of signaling cascades that govern critical cellular processes. They provide understandings  cellular behavior mechanisms, insights of disease progression and treatment responses. In an R&D organization, managing pathways across different datasets are crucial for gaining insights of potential therapeutic targets and intervention strategies.\n",
+    "\n",
+    "In this notebook we manage a pathway registry based on \"2023 GO Biological Process\" ontology. We'll walk you through the following steps:\n",
+    "\n",
+    "1. Register pathways and link them to genes. \n",
+    "2. Perform a pathway enrichment analysis on an interferon-beta treated dataset and track the dataset with LaminDB.\n",
+    "3. Demonstrate how datasets are queryable by pathways and genes using LaminDB."
    ]
   },
   {
@@ -68,7 +58,7 @@
    },
    "outputs": [],
    "source": [
-    "# A lamindb instance containing bionty schema (skip if you already loaded your instance)\n",
+    "# A lamindb instance containing bionty schema (skip if you already loaded your own instance)\n",
     "!lamin init --storage ./enrichr --schema bionty"
    ]
   },
@@ -80,15 +70,10 @@
    "source": [
     "import lamindb as ln\n",
     "import lnschema_bionty as lb\n",
-    "\n",
-    "lb.settings.species = \"human\"  # globally set species\n",
-    "\n",
+    "from lamin_usecases import datasets as ds\n",
     "import gseapy as gp\n",
     "import scanpy as sc\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
-    "from lamin_usecases import datasets as ds\n",
-    "\n",
     "\n",
     "lb.settings.species = \"human\"  # globally set species"
    ]
@@ -98,7 +83,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Fetch `GO_Biological_Process_2023` pathways annotated with human genes using Enrichr"
+    "## Fetch GO pathways annotated with human genes using Enrichr"
    ]
   },
   {
@@ -185,10 +170,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "pathway_bionty = lb.Pathway.bionty()  # equals to bionty.Pathway()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pathway_bionty = lb.Pathway.bionty()  # equals to bionty.Pathway()\n",
     "pathway_bionty"
    ]
   },
@@ -367,9 +364,7 @@
    "metadata": {},
    "source": [
     "We will now conduct a pathway enrichment analysis on a small peripheral blood mononuclear cell dataset that is split into control and stimulated groups.\n",
-    "The stimulated group was treated with interferon beta.\n",
-    "\n",
-    "The dataset was initially obtained using `From \"SeuratData::ifnb\"`."
+    "The stimulated group was treated with interferon beta."
    ]
   },
   {
@@ -383,10 +378,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "adata = ds.anndata_seurat_ifnb()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "adata = ds.anndata_seurat_ifnb()\n",
     "adata"
    ]
   },
@@ -430,7 +437,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This analysis is based on: https://gseapy.readthedocs.io/en/master/singlecell_usecase.html"
+    "This analysis is based on the [GSEApy scRNA-seq Example](https://gseapy.readthedocs.io/en/latest/singlecell_example.html)."
    ]
   },
   {
@@ -804,47 +811,16 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Conclusion"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Registering pathways and associated gene sets is made simple with `.from_values` that ensures that all parsed objects are linked to ontology IDs.Linking both sets is possible with FeatureSet to facilitate simple querying for datasets that contain specific pathways. Since the pathways are linked to genes, Lamin also enables fetching the associated genes of a registered pathway to, for usecase, retrieve sets of differentially expressed genes that are a part of a specific pathway."
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Try it yourself"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This notebook is available at [https://github.com/laminlabs/lamin-usecases](https://github.com/laminlabs/lamin-usecases)."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "tags": [
-     "hide-cell"
+     "hide-output"
     ]
    },
    "outputs": [],
    "source": [
+    "# clean up test instance\n",
     "!lamin delete --force enrichr\n",
     "!rm -r ./enrichr"
    ]
