📝 Polish flow & scrna

--- a/docs/flow.ipynb
+++ b/docs/flow.ipynb
@@ -529,7 +529,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Query by cell markers"
+    "### Query by cell markers ![](https://img.shields.io/badge/Access-10b981) "
    ]
   },
   {
@@ -688,7 +688,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.9.16"
   },
   "nbproject": {
    "id": "OWuTtS4SApon",
