♻️ Upgrade to latest lamindb

--- a/docs/analysis-flow.ipynb
+++ b/docs/analysis-flow.ipynb
@@ -146,7 +146,7 @@
    "outputs": [],
    "source": [
     "file = ln.File.from_anndata(\n",
-    "    adata, key=\"mini_anndata_with_obs.h5ad\", var_ref=lb.Gene.ensembl_gene_id\n",
+    "    adata, key=\"mini_anndata_with_obs.h5ad\", field=lb.Gene.ensembl_gene_id\n",
     ")"
    ]
   },
@@ -207,7 +207,8 @@
    "source": [
     "ln.Feature(name=\"cell_type\", type=\"category\").save()\n",
     "ln.Feature(name=\"tissue\", type=\"category\").save()\n",
-    "ln.Feature(name=\"disease\", type=\"category\").save()"
+    "ln.Feature(name=\"disease\", type=\"category\").save()\n",
+    "features = ln.Feature.lookup()"
    ]
   },
   {
@@ -228,9 +229,9 @@
    },
    "outputs": [],
    "source": [
-    "file.add_labels(cell_types, feature=\"cell_type\")\n",
-    "file.add_labels(tissues, feature=\"tissue\")\n",
-    "file.add_labels(diseases, feature=\"disease\")"
+    "file.add_labels(cell_types, feature=features.cell_type)\n",
+    "file.add_labels(tissues, feature=features.tissue)\n",
+    "file.add_labels(diseases, feature=features.disease)"
    ]
   },
   {
@@ -430,7 +431,7 @@
     "file_subset = ln.File.from_anndata(\n",
     "    adata_subset.to_memory(),\n",
     "    key=\"subset/mini_anndata_with_obs.h5ad\",\n",
-    "    var_ref=lb.Gene.ensembl_gene_id,\n",
+    "    field=lb.Gene.ensembl_gene_id,\n",
     ")"
    ]
   },
@@ -465,9 +466,9 @@
     "tissues = lb.Tissue.from_values(adata.obs.tissue, lb.Tissue.name)\n",
     "diseases = lb.Disease.from_values(adata.obs.disease, lb.Disease.name)\n",
     "\n",
-    "file_subset.add_labels(cell_types, feature=\"cell_type\")\n",
-    "file_subset.add_labels(tissues, feature=\"tissue\")\n",
-    "file_subset.add_labels(diseases, feature=\"disease\")"
+    "file_subset.add_labels(cell_types, feature=features.cell_type)\n",
+    "file_subset.add_labels(tissues, feature=features.tissue)\n",
+    "file_subset.add_labels(diseases, feature=features.disease)"
    ]
   },
   {
