--- a/docs/bulkrna.ipynb
+++ b/docs/bulkrna.ipynb
@@ -60,14 +60,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## nf-core Salmon count matrix"
+    "### Access ![](https://img.shields.io/badge/Access-10b981)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We start by simulating a [nf-core RNA-seq](https://nf-co.re/rnaseq)) run which yields us a count matrix file."
+    "We start by simulating a [nf-core RNA-seq](https://nf-co.re/rnaseq) run which yields us a count matrix file.\n",
+    "\n",
+    "(See {doc}`docs:/nextflow` for running this with Nextflow.)"
    ]
   },
   {
@@ -75,7 +77,7 @@
    "execution_count": null,
    "metadata": {
     "tags": [
-     "hide-cell"
+     "hide-output"
     ]
    },
    "outputs": [],
@@ -278,7 +280,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# also register the 2 non-validated genes\n",
+    "# also register the 2 non-validated genes obtained from Bionty\n",
     "ln.save(genes)"
    ]
   },
@@ -306,7 +308,7 @@
    "outputs": [],
    "source": [
     "curated_file = ln.File.from_anndata(\n",
-    "    adata, description=\"Curated bulk RNA counts\", var_ref=lb.Gene.stable_id\n",
+    "    adata, description=\"Curated bulk RNA counts\", field=lb.Gene.stable_id\n",
     ")"
    ]
   },
@@ -332,8 +334,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "curated_file.add_labels(assays.rna_seq, \"assay\")\n",
-    "curated_file.add_labels(lb.settings.species, \"species\")"
+    "features = ln.Features.lookup()\n",
+    "curated_file.add_labels(assays.rna_seq, features.assay)\n",
+    "curated_file.add_labels(lb.settings.species, features.species)"
    ]
   },
   {
