--- a/docs/enrichr.ipynb
+++ b/docs/enrichr.ipynb
@@ -579,7 +579,7 @@
    "outputs": [],
    "source": [
     "file = ln.File.from_anndata(\n",
-    "    adata_ba, description=\"seurat_ifnb_activated_Bcells\", var_ref=lb.Gene.symbol\n",
+    "    adata_ba, description=\"seurat_ifnb_activated_Bcells\", field=lb.Gene.symbol\n",
     ")"
    ]
   },
