--- a/docs/facs.ipynb
+++ b/docs/facs.ipynb
@@ -291,7 +291,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = ln.File.from_anndata(adata, description=\"Alpert19\", var_ref=lb.CellMarker.name)"
+    "file = ln.File.from_anndata(adata, description=\"Alpert19\", field=lb.CellMarker.name)"
    ]
   },
   {
@@ -309,8 +309,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file.add_labels(facs, \"assay\")\n",
-    "file.add_labels(lb.settings.species, \"species\")"
+    "features = ln.Feature.lookup()\n",
+    "file.add_labels(facs, features.assay)\n",
+    "file.add_labels(lb.settings.species, features.species)"
    ]
   },
   {
@@ -444,7 +445,7 @@
    "outputs": [],
    "source": [
     "file2 = ln.File.from_anndata(\n",
-    "    adata2, description=\"My fcs file\", var_ref=lb.CellMarker.name\n",
+    "    adata2, description=\"My fcs file\", field=lb.CellMarker.name\n",
     ")"
    ]
   },
@@ -463,8 +464,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file2.add_labels(facs, \"assay\")\n",
-    "file2.add_labels(lb.settings.species, \"species\")"
+    "file2.add_labels(facs, features.assay)\n",
+    "file2.add_labels(lb.settings.species, features.species)"
    ]
   },
   {
