--- a/docs/multimodal.ipynb
+++ b/docs/multimodal.ipynb
@@ -373,7 +373,8 @@
    "source": [
     "gene_targets = lb.Gene.from_values(obs[\"gene_target\"], lb.Gene.symbol)\n",
     "ln.save(gene_targets)\n",
-    "file.add_labels(gene_targets, feature=\"gene_target\")"
+    "features = ln.Feature.lookup()\n",
+    "file.add_labels(gene_targets, feature=features.gene_target)"
    ]
   },
   {
@@ -392,7 +393,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file.add_labels(nt, feature=\"gene_target\")"
+    "file.add_labels(nt, feature=features.gene_target)"
    ]
   },
   {
