--- a/docs/spatial.ipynb
+++ b/docs/spatial.ipynb
@@ -140,7 +140,7 @@
     "file_ad = ln.File.from_anndata(\n",
     "    adata,\n",
     "    description=\"Suo22 Visium10X image F121_LP1_4LIV\",\n",
-    "    var_ref=lb.Gene.ensembl_gene_id,\n",
+    "    field=lb.Gene.ensembl_gene_id,\n",
     ")\n",
     "file_ad.save()"
    ]
