--- a/docs/bulkrna.ipynb
+++ b/docs/bulkrna.ipynb
@@ -334,7 +334,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "features = ln.Features.lookup()\n",
+    "features = ln.Feature.lookup()\n",
     "curated_file.add_labels(assays.rna_seq, features.assay)\n",
     "curated_file.add_labels(lb.settings.species, features.species)"
    ]
