--- a/docs/celltypist.ipynb
+++ b/docs/celltypist.ipynb
@@ -837,6 +837,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "features = ln.Feature.lookup()\n",
     "file_annotated.add_labels(celltypes, feature=features.predicted_labels)"
    ]
   },
