--- a/docs/bulkrna.ipynb
+++ b/docs/bulkrna.ipynb
@@ -69,7 +69,7 @@
    "source": [
     "We start by simulating a [nf-core RNA-seq](https://nf-co.re/rnaseq) run which yields us a count matrix file.\n",
     "\n",
-    "(See {doc}`docs:/nextflow` for running this with Nextflow.)"
+    "(See {doc}`docs:nextflow` for running this with Nextflow.)"
    ]
   },
   {
