♻️ Upgrade to latest lamindb (#61)

--- a/docs/celltypist.ipynb
+++ b/docs/celltypist.ipynb
@@ -818,7 +818,7 @@
    "outputs": [],
    "source": [
     "file_annotated = ln.File.from_anndata(\n",
-    "    adata_annotated, description=\"Examplary CellTypist file\", var_ref=lb.Gene.symbol\n",
+    "    adata_annotated, description=\"Examplary CellTypist file\", field=lb.Gene.symbol\n",
     ")"
    ]
   },
@@ -837,7 +837,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_annotated.add_labels(celltypes, feature=\"predicted_labels\")"
+    "features = ln.Feature.lookup()\n",
+    "file_annotated.add_labels(celltypes, feature=features.predicted_labels)"
    ]
   },
   {
