📝 Bring back scrna concat

--- a/docs/multimodal.ipynb
+++ b/docs/multimodal.ipynb
@@ -36,7 +36,7 @@
    "execution_count": null,
    "metadata": {
     "tags": [
-     "hide-cell"
+     "hide-output"
     ]
    },
    "outputs": [],
@@ -446,11 +446,12 @@
    "execution_count": null,
    "metadata": {
     "tags": [
-     "hide-cell"
+     "hide-output"
     ]
    },
    "outputs": [],
    "source": [
+    "# clean up test instance\n",
     "!lamin delete --force test-multimodal\n",
     "!rm -r test-multimodal"
    ]
