--- a/docs/spatial.ipynb
+++ b/docs/spatial.ipynb
@@ -25,7 +25,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "tags": []
+    "tags": [
+     "hide-output"
+    ]
    },
    "outputs": [],
    "source": [
@@ -174,7 +176,7 @@
    "execution_count": null,
    "metadata": {
     "tags": [
-     "hide-cell"
+     "hide-output"
     ]
    },
    "outputs": [],
