--- a/docs/bulkrna.ipynb
+++ b/docs/bulkrna.ipynb
@@ -430,11 +430,12 @@
    "execution_count": null,
    "metadata": {
     "tags": [
-     "hide-cell"
+     "hide-output"
     ]
    },
    "outputs": [],
    "source": [
+    "# clean up test instance\n",
     "!lamin delete --force test-bulkrna\n",
     "!rm -r test-bulkrna"
    ]
