--- a/docs/celltypist.ipynb
+++ b/docs/celltypist.ipynb
@@ -12,7 +12,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Manage a cell type registry"
+    "# Register CellTypist vocabulary"
    ]
   },
   {
@@ -23,11 +23,7 @@
     "Cell types classify cells based on public and private knowledge from studying transcription, morphology, function & other properties.\n",
     "Established cell types have well-characterized markers and properties; however, cell subtypes and states are continuously being discovered, refined and better understood.\n",
     "\n",
-    "In this notebook, we manage an immune cell type registry from [CellTypist](https://www.celltypist.org), a computational tool used for cell type classification in scRNA-seq data. We'll walk you through the following steps:\n",
-    "\n",
-    "1. Create a cell type registry seeded from cell types supported by CellTypist.\n",
-    "2. Use CellTypist to classify cell types of a previously unannotated dataset and track the dataset with LaminDB.\n",
-    "3. Demonstrate how datasets are queryable by cell types using LaminDB."
+    "In this notebook, we register the immune cell type vocabulary from [CellTypist](https://www.celltypist.org), a computational tool used for cell type classification in scRNA-seq data."
    ]
   },
   {
@@ -36,16 +32,6 @@
    "metadata": {},
    "source": [
     "## Setup"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "To run this notebook, you need to load a LaminDB instance that has the `bionty` schema mounted.\n",
-    "\n",
-    "Here, we'll create a test instance (skip if you'd like to run it using your own instance):"
    ]
   },
   {
@@ -105,45 +91,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For a start, let's take a look at the public Cell Ontology."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "celltype_bt = lb.CellType.bionty()  # equals to bionty.CellType()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "celltype_bt"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Create an in-house registry of CellTypist terms"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Fetch CellTypist's immune cell encyclopedia"
+    "## Access CellTypist records ![](https://img.shields.io/badge/Access-10b981) "
    ]
   },
   {
@@ -212,15 +160,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Validate terms with the public Cell Ontology\n",
+    "## Validate CellTypist records ![](https://img.shields.io/badge/Validate-10b981) \n",
     "\n",
     "For any cell type record that can be validated against the public Cell Ontology, we'd like to ensure that it's actually validated.\n",
     "\n",
     "This will avoid that we'll refer to the same cell type with different identifiers.\n",
     "\n",
-    "Let's see how well the Cell Typist reference data can be validated.\n",
-    "\n",
-    "All Celltypist labeled ontology IDs are validated using the public Cell Ontology:"
+    "We need a `Bionty` object for this:"
    ]
   },
   {
@@ -229,7 +175,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "celltype_bt.inspect(celltypist_df[\"Cell Ontology ID\"], celltype_bt.ontology_id);"
+    "bionty = lb.CellType.bionty()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bionty"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can now validate the `\"Cell Ontology ID\"` column\n",
+    "\n",
+    ":::{dropdown} When should I use `inspect()` and when `validate()`?\n",
+    "\n",
+    "{meth}`~lamindb.dev.CanValidate.inspect` gives us more logging than {meth}`~lamindb.dev.CanValidate.validate` but runs a bit slower.\n",
+    "\n",
+    "Hence, we'll use `inspect` if we suspect validation won't pass and we want to debug why to curate data.\n",
+    "\n",
+    ":::"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bionty.inspect(celltypist_df[\"Cell Ontology ID\"], bionty.ontology_id);"
    ]
   },
   {
@@ -237,7 +216,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "However, when inspecting the names, most of them don't validate:"
+    "This looks good!\n",
+    "\n",
+    "But when inspecting the names, most of them don't validate:"
    ]
   },
   {
@@ -246,7 +227,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "celltype_bt.inspect(celltypist_df[\"Low-hierarchy cell types\"], celltype_bt.name);"
+    "bionty.inspect(celltypist_df[\"Low-hierarchy cell types\"], bionty.name);"
    ]
   },
   {
@@ -272,7 +253,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "celltype_bt.search(celltypist_df[\"Low-hierarchy cell types\"][0]).head(2)"
+    "bionty.search(celltypist_df[\"Low-hierarchy cell types\"][0]).head(2)"
    ]
   },
   {
@@ -289,9 +270,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "celltype_bt.inspect(\n",
+    "bionty.inspect(\n",
     "    [i.rstrip(\"s\") for i in celltypist_df[\"Low-hierarchy cell types\"]],\n",
-    "    celltype_bt.name,\n",
+    "    bionty.name,\n",
     ");"
    ]
   },
@@ -321,7 +302,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Register CellTypist records in LaminDB"
+    "## Register CellTypist records ![](https://img.shields.io/badge/Register-10b981) "
    ]
   },
   {
@@ -535,7 +516,7 @@
    "source": [
     "for term in list(high_terms_nonval):\n",
     "    print(f\"Term: {term}\")\n",
-    "    display(celltype_bt.search(term).head(1))"
+    "    display(bionty.search(term).head(1))"
    ]
   },
   {
@@ -592,7 +573,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Access the in-house CellType registry"
+    "## Access the registry"
    ]
   },
   {
@@ -673,227 +654,6 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "## Annotate a dataset with cell types using CellTypist"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Annotate cell types predicted with CellTypist"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We now demonstrate how simple it is to predict and add cell types to LaminDB with CellTypist.\n",
-    "Our dataset of choice is a simple sample dataset together with a sample model."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "input_file = celltypist.samples.get_sample_csv()\n",
-    "input_file"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "predictions = celltypist.annotate(\n",
-    "    input_file, model=\"Immune_All_Low.pkl\", majority_voting=True\n",
-    ")"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now that we've predicted all cell types we create an [Anndata](https://anndata.readthedocs.io/en/latest) object that we will eventually track with LaminDB."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "adata_annotated = predictions.to_adata()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "adata_annotated.obs"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Validate cell types:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "celltypes = lb.CellType.from_values(\n",
-    "    adata_annotated.obs.predicted_labels, lb.CellType.name\n",
-    ")"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Track the annotated dataset in LaminDB"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Register features"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "features = ln.Feature.from_df(adata_annotated.obs)\n",
-    "ln.save(features)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Create a file record of the AnnData object.\n",
-    "We further define a name of the dataset for clarity that can also be queried for."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file_annotated = ln.File.from_anndata(\n",
-    "    adata_annotated, description=\"Examplary CellTypist file\", field=lb.Gene.symbol\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file_annotated.save()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "features = ln.Feature.lookup()\n",
-    "file_annotated.add_labels(celltypes, feature=features.predicted_labels)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file_annotated.describe()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file_annotated.view_flow()"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now we can query a file by a specific cell type:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ln.File.filter(cell_types=db_lookup.tcm_naive_helper_t_cells).df()"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Or track in which notebook the file is annotated by celltypist:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ln.Transform.filter(files__description__icontains=\"CellTypist\").df()"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -928,7 +688,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.9.16"
   },
   "nbproject": {
    "id": "s5mkN5NQ1ttI",
