--- a/docs/bulkrna.ipynb
+++ b/docs/bulkrna.ipynb
@@ -268,7 +268,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "genes = lb.Gene.from_values(adata.var.index, lb.Gene.stable_id)"
@@ -285,16 +289,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "assays = lb.ExperimentalFactor.lookup()\n",
-    "assays.rna_seq"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -307,8 +301,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "efs = lb.ExperimentalFactor.lookup()\n",
+    "modalities = ln.Modality.lookup()\n",
+    "species = lb.Species.lookup()\n",
+    "features = ln.Feature.lookup()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "curated_file = ln.File.from_anndata(\n",
-    "    adata, description=\"Curated bulk RNA counts\", field=lb.Gene.stable_id\n",
+    "    adata,\n",
+    "    description=\"Curated bulk RNA counts\",\n",
+    "    field=lb.Gene.stable_id,\n",
+    "    modality=modalities.rna,\n",
     ")"
    ]
   },
@@ -322,21 +331,35 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "curated_file.save()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Link to validated metadata records:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
-    "features = ln.Feature.lookup()\n",
-    "curated_file.add_labels(assays.rna_seq, features.assay)\n",
-    "curated_file.add_labels(lb.settings.species, features.species)"
+    "curated_file.add_labels(efs.rna_seq, features.assay)\n",
+    "curated_file.add_labels(species.saccharomyces_cerevisiae, features.species)"
    ]
   },
   {
