--- a/docs/multimodal.ipynb
+++ b/docs/multimodal.ipynb
@@ -25,13 +25,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Setup"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -55,8 +48,7 @@
     "import lamindb as ln\n",
     "import lnschema_bionty as lb\n",
     "\n",
-    "lb.settings.species = \"human\"\n",
-    "ln.settings.verbosity = 3"
+    "lb.settings.species = \"human\""
    ]
   },
   {
@@ -206,10 +198,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_genes = [\n",
-    "    lb.Gene(symbol=symbol, species=lb.settings.species)\n",
-    "    for symbol in mdata[\"rna\"].var_names[~validated]\n",
-    "]\n",
+    "new_genes = [lb.Gene(symbol=symbol) for symbol in mdata[\"rna\"].var_names[~validated]]\n",
     "ln.save(new_genes)"
    ]
   },
@@ -248,7 +237,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lb.CellMarker.validate(mdata[\"adt\"].var_names, field=lb.CellMarker.name);"
+    "lb.CellMarker.validate(mdata[\"adt\"].var_names);"
    ]
   },
   {
@@ -257,7 +246,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "markers = lb.CellMarker.from_values(mdata[\"adt\"].var_names, field=lb.CellMarker.name)\n",
+    "markers = lb.CellMarker.from_values(mdata[\"adt\"].var_names)\n",
     "ln.save(markers)"
    ]
   },
@@ -267,7 +256,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lb.CellMarker.validate(mdata[\"adt\"].var_names, field=lb.CellMarker.name);"
+    "lb.CellMarker.validate(mdata[\"adt\"].var_names);"
    ]
   },
   {
