--- a/docs/spatial.ipynb
+++ b/docs/spatial.ipynb
@@ -15,13 +15,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Setup"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -49,8 +42,7 @@
     "import matplotlib.pyplot as plt\n",
     "import scanpy as sc\n",
     "\n",
-    "lb.settings.species = \"human\"\n",
-    "ln.settings.verbosity = 3"
+    "lb.settings.species = \"human\""
    ]
   },
   {
@@ -66,7 +58,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Access"
+    "## Access ![](https://img.shields.io/badge/Access-10b981)"
    ]
   },
   {
@@ -119,7 +111,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Register"
+    "## Register ![](https://img.shields.io/badge/Register-10b981)"
    ]
   },
   {
