--- a/docs/facs.ipynb
+++ b/docs/facs.ipynb
@@ -86,7 +86,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "tags": []
+    "tags": [
+     "hide-output"
+    ]
    },
    "outputs": [],
    "source": [
@@ -153,7 +155,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "adata.var.index = lb.CellMarker.standardize(adata.var.index)"
@@ -279,7 +285,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "file = ln.File.from_anndata(\n",
@@ -465,7 +475,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "file2 = ln.File.from_anndata(\n",
@@ -671,8 +685,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "adata = file1.load()\n",
-    "adata"
+    "file1.load()"
    ]
   },
   {
